--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="hero-buttons">
-                        <button class="btn btn-primary" onclick="scrollToSection('curso')">
+                        <button class="btn btn-primary" onclick="goToWeek1()">
                             <i class="fas fa-play"></i> Comenzar Ahora
                         </button>
                         <button class="btn btn-secondary" onclick="scrollToSection('temario')">
@@ -153,6 +153,9 @@
                     <div class="timeline-content">
                         <h3>Semana 1: Introducción a las Metodologías Ágiles</h3>
                         <p>Historia, principios y valores del Manifiesto Ágil</p>
+                        <button class="btn btn-small btn-primary" onclick="goToWeek1()">
+                            <i class="fas fa-arrow-right"></i> Comenzar Semana 1
+                        </button>
                     </div>
                 </div>
 
@@ -284,8 +287,8 @@
                 <h2>¿Listo para Transformar tu Carrera?</h2>
                 <p>Únete a miles de profesionales que ya dominan las metodologías ágiles</p>
                 <div class="cta-buttons">
-                    <button class="btn btn-primary btn-large">
-                        <i class="fas fa-rocket"></i> Iniciar Curso Ahora
+                    <button class="btn btn-primary btn-large" onclick="goToWeek1()">
+                        <i class="fas fa-rocket"></i> Comenzar Semana 1
                     </button>
                     <button class="btn btn-outline btn-large">
                         <i class="fas fa-calendar"></i> Agenda una Demo
